# ball-tracking-live-plot

./: README.md  pyproject.toml  ruff.toml  tracker.py
.github/workflows/: ci.yaml  ruff.yaml
rerun/: ball_tracking.rbl
src/: colormap.py  stream.py  tracker.py
src/ball_tracking/: colormap.py  core.py  stream.py  tracker.py  tracking.py  trajectory.py  trajectory_rerun.py  video_loop.py
